welcome.lessons.welcome.array.array667.Array667.scala.error
array667:-6: error: Missing closing brace `}' assumed here
try {
^array667:1: error: expected class or object definition
def array667(nums:Array[Int]): Int = {var compteur = 0;
^